<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@android:color/white">
    <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_todo_wrapper_height"
            android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
                android:id="@+id/appbarLayout"
                android:layout_height="@dimen/dash_tool_height"
                android:layout_width="match_parent">
            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:contentInsetStart="0dp">
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/fab_margin"
                        android:paddingRight="@dimen/fab_margin"
                        android:paddingTop="@dimen/fab_margin">
                    <ImageButton
                            android:id="@+id/cross_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/cross"
                            android:padding="@dimen/add_todo_cross"
                            android:layout_marginTop="@dimen/add_todo_cross"
                            android:layout_alignParentRight="true"
                            android:background="?attr/selectableItemBackgroundBorderless"/>
                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/todoinputlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:theme="@style/AddTodoLabel"
                            app:hintTextAppearance="@style/AddTodoLabel">
                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/todotitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/todo_title"
                                android:textColor="@android:color/white"
                                android:inputType="text"
                                android:maxLines="2"/>
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <android.support.design.widget.FloatingActionButton
                android:id="@+id/save_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/send"
                app:fabSize="normal"
                app:layout_anchor="@id/appbarLayout"
                app:layout_anchorGravity="bottom|right"
                android:layout_margin="@dimen/fab_margin"
                android:tint="@android:color/white"/>
    </android.support.design.widget.CoordinatorLayout>

    <Switch
            android:id="@+id/reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:padding="@dimen/fab_margin"
            android:text="@string/remindme"
            android:textSize="@dimen/reminder_text_size"/>

    <LinearLayout
            android:id="@+id/reminderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:orientation="horizontal"
            android:weightSum="1"
            android:visibility="gone"
            tools:visibility="visible">
        <Button
                android:id="@+id/choosedate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                tools:text="31st Aug"
                android:textSize="@dimen/reminder_layout_text_size"
                android:background="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"/>
        <Button
                android:id="@+id/choosetime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                tools:text="6:00 am"
                android:textSize="@dimen/reminder_layout_text_size"
                android:background="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"/>
    </LinearLayout>
</LinearLayout>